# thesis

./: README.md  ref.bib
literature_study/: failures  plan
plans/: assn_pm.tex
plots/: classification_voltage.eps  example_classification.fig  solar-density.fig
presentation/: outlint
presentation/kth_official.key/Metadata/: DocumentIdentifier  Properties.plist
report/: abstract.html  abstract.tex  build  glossary.tex  header.tex  kth_svv_comp_science_comm.eps  misc.tex  modifications.sty  report.tex  sammanfattning.html
report/data/: CombineKTH.hs  ParseDegrad.hs  bin.m  current_error  current_ratio  fig2eps.m  kth_indices  kth_offsets  voltage_error  voltage_ratio
report/images/: classification-current.eps  degrad-current-error.eps  degrad-current-ratio.eps  degrad-voltage-error.eps  degrad-voltage-ratio.eps  january-power-curve.xcf  october-power-curve.xcf  solar-cell-equiv.xcf  solar-module-generic.xcf  solar-plane-faults.eps  solar-plane.eps  trina-60cell-iv.xcf
simulation/: Driver.hs  Generate.hs  LICENSE  ParseOpti.hs  Reference.hs  Retrieve.hs  Storage.hs  classify_year.m  data_sources  deploy  detect.m  fault_detection  init.m  notes_meeting  plans  regr.m  simulation.cabal  wrapper.m
simulation/logs/: params  smhi_temp  temperatures  work
simulation/logs/kth/: out_curr.m  out_volt.m
simulation/scripts/: bench.m  classify_year.m  daily.m  detect.m  draw.m  example-epsilon-plot.m  output.m  pow.m  solar.m  volt.m
simulation/src/: Admin.hs  Classify.hs  DBSCAN.hs  Driver.hs  Fault.hs  Generate.hs  Measure.hs  Reference.hs  Retrieve.hs  Storage.hs
spec/: spec.tex
