name:                pv-sim
version:             0.1.0.0
synopsis:            PV power curve generation.
description:         Generation of voltage-current curves based on a single power reference.
category:            Simulation
license:             BSD3
license-file:        LICENSE
author:              David Nilsson
maintainer:          nilsson.dd@gmail.com
build-type:          Simple
cabal-version:       >=1.8

flag llvm
  description: compile via LLVM using heavy optimizations
  default    : False

executable sim-admin
  main-is: Admin.hs
  other-modules: Storage
  build-depends:
    base, 
    time, 
    text, 
    old-locale, 
    cassandra-cql, 
    mtl, 
    vector >= 0.10.9.1,
    unordered-containers, 
    network ==2.4.*
  hs-source-dirs:      src

executable sim-driver
  main-is: Driver.hs
  other-modules: Classify, Fault, Generate, Measure, Reference, Retrieve, Storage
  build-depends:
    async,
    ad == 3.4,
    base, 
    deepseq-generics,
    lens, 
    free, 
    time, 
    text, 
    pipes, 
    pipes-group, 
    pipes-parse, 
    pipes-safe, 
    pipes-text, 
    old-locale, 
    cassandra-cql, 
    mtl, 
    vector >= 0.10.9.1,
    mwc-random, 
    primitive, 
    unordered-containers, 
    vector-algorithms, 
    lens-family-core, 
    pipes-vector, 
    network
  hs-source-dirs:      src

  if flag(llvm)
    ghc-options:         -O2 -threaded -rtsopts -fllvm -funbox-strict-fields -fexcess-precision -fstatic-argument-transformation -fspec-constr -optlo-loop-reduce -optlo-scalarrepl -optlo-mem2reg -optlo-prune-eh
  else
    ghc-options:         -O1 -threaded -rtsopts
